--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@ body {
 body {
   width: 100%;
   height: 100vh;
-  background: url('assets/freedom.jpg') no-repeat center;
+  background: url('assets/colombia.jpg') no-repeat center;
   background-size: cover;
   color: #333;
 }
@@ -35,4 +35,8 @@ body {
     width: 4vw;
     height: 2.5vw;
     padding: 1vw;
+}
+
+ul {
+    list-style-type: none;
 }
